--- a/probability-basic.qmd
+++ b/probability-basic.qmd
@@ -44,7 +44,15 @@ https://3.vobs.at/maturawiki/index.php/Wahrscheinlichkeit:_Baumdiagramme_und_Pfa
 
 
 
+|            |       |                     |                     |                     |
+|:----------:|:-----:|:-------------------:|:-------------------:|:-------------------:|
+|            |       |    **Infected**     |                     |                     |
+|            |       |      *Yes (1)*      |      *No (0)*       |                     |
+| **Animal** | *Dog* |  $23_{\;\Large a}$  |  $10_{\;\Large b}$  | $\mathbf{a+b = 33}$ |
+|            | *Cat* |  $18_{\;\Large c}$  |  $14_{\;\Large d}$  | $\mathbf{c+d = 32}$ |
+|            |       | $\mathbf{a+c = 41}$ | $\mathbf{b+d = 24}$ |      $n = 65$       |
 
+: Eine 2x2 Tabelle als Beispiel für unterschiedliche Flohinfektionen bei Hunden und Katzen. Dargestellt sind die *beobachteten* Werte. {#tbl-prob-1}
 
 Text
 
