--- a/probability-basic.qmd
+++ b/probability-basic.qmd
@@ -10,64 +10,65 @@ pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 
 ![](images/caution.png){fig-align="center" width="50%"}
 
+In diesem Abschnitt wollen wir uns nochmal die Grundlagen der Wahrscheinlcihkeitsrechnung vergegenwertigen. Vieles davon ist schon bekannt und dient der Auffrischung. Wir brauchen Wahrscheinlichkeiten und deren Berechnungen später in der direkten Anwendung in der Statistik. Wir konzentrieren uns hier zu Anfang auf den  laplaceschen Wahrscheinlichkeitbegriff und werden noch andere in der Statistik kennen lernen. Zum Anfang soll aber der klassische laplacesche Wahrscheinlichkeitbegriff ausreichen.
+
 Eigentlich habe ich in diesem sehr kurzen Leitfaden zur Mathematik nur eine echte Literaturempfehlung im Bereich der Wahrscheinlichkeitsrechnung und das ist das Buch von Jonathan Weisberg. Das tolle Buch von Jonathan Weisberg ist [online zu finden](https://jonathanweisberg.org/vip/). Ein schönes Buch über Wahrscheinlichkeiten. Ich habe teilweise Beispiele aus dem Buch verwendet und darüber hinaus finde ich es sehr spannend zu lesen. 
 
 ::: column-margin
 ![](images/odds_and_ends.PNG){fig-align="center"}
 :::
 
-## Definiton einer Wahrscheinlichkeit
+## Laplacescher Wahrscheinlichkeitbegriff
 
+Wenn du also eine Münze wirfst, dann erhältst du zufällig Kopf oder Zahl. Leider weißt du vorher nicht, auf welcher Seite die Münze landen wird. Wir können aber berechnen, wie groß die Wahrscheinlichkeit $Pr$ für ein Ergebnis Kopf oder Zahl ist. Mit dem Bestimmen einer Eintrittswahrscheinlichkeit eines Ereignisses beschäftigt sich die Wahrscheinlichkeitsrechnung. Wir beginnen mit einem einstufigen Zufallsexperiment.
 
+Einstufiges Zufallsexperiment
+: Wir haben den Versuch nur einmal durchgeführt hast. Zum Beispiel wurde die Münze nur einmal geworfen. Der Würfel wurde nur einmal gerollt.
 
-Wenn wir mit Wahrscheinlichkeiten rechen, dann ermitteln wir die Wahrscheinlichkeiten $Pr$ für ein bestimmtes Ereignis $A$ in einem Zufallsexperiment. Im Folgenden siehst du die Schreibweise für die Wahrscheinlichkeit $Pr$ für das Ereignis $A$. Die Wahrscheinlichkeit $Pr(A)$ ist gleich 0.6 in dem Zufallsexperiment.
+Wenn wir mit Wahrscheinlichkeiten rechen, dann ermitteln wir also die Wahrscheinlichkeiten $Pr$ für ein bestimmtes Ereignis $A$ in einem Zufallsexperiment. Im Folgenden siehst du die Schreibweise für die Wahrscheinlichkeit $Pr$ für das Ereignis $A$. 
 
 ![](images/prob_pr_overview.png){fig-align="center" width="80%"}
 
-Das bekannteste Beispiel die Wahrscheinlichkeit für Kopf beim Werfen einer Münze. 
+Die Wahrscheinlichkeit $Pr(A)$ für das Auftreten des Ereignisses $A$ ist 0.6. Hierbei ist wichtig, dass wir immer eine Wahrscheinlichkeit auf ein Ereignis beziehen. Ohne ein Ereignis ist eine Wahrscheinlichkeit nicht zu interpretieren. 
+
+Ereignis
+: Ein Ereignis definieren wir selber. Zum Beispiel sind $E_1 = \{\mbox{die Zahl ist größer als 3}\}$ und $E_2 = \{\mbox{die Zahl ist gleich 6}\}$ Ereignisse. Je nach Ergebnis des Würfels wird entscheiden, ob das Ereignis eingetreten ist oder nicht. 
+
+Neben dem Ereignis $A$ gibt es noch das Gegenereignis $\bar{A}$ oder $A'$. Das Gegenereignis tritt ein, wenn das eigentlich Ereignis nicht passiert ist. Wir berechnen die Wahrscheinlichkeit für das Gegenereignis $Pr(\bar{A})$ in dem wir 1 minus der Wahrscheinlichkeit für das Eintreten des Ereignisses $A$ rechnen.
 
 ![](images/prob_pr_gegen_overview.png){fig-align="center" width="90%"}
-Im Folgenden sehen wir einmal die Ergebnismenge eines sechseitigen Würfels 1W6.
+
+Für das Werfen einer Münze wäre das Ereignis $A = \{Kopf\}$ gleich $0.5$. Das Gegenereignis $\bar{A} = \{Zahl\}$ wäre dann $1-Pr(A)$ und somit auch $0.5$. Hier haben wir es aber mit einer 'fairen' Münze in unserem Zufallsexperiment zu tun. 
+
+Fair
+: Wir nutzen den begriff 'fair' für ein Objekt, wenn die Wahrscheinlichkeit für da Eintreten eines Ereignisses durch das Objekt über alle Ereignisse gleich ist. Bei einem idealen, 'fairen' Würfel hat wegen der Symmetrie jede der sechs Seiten von vornherein die gleiche Wahrscheinlichkeit, nach dem Wurf oben zu liegen.
+
+Bei einer Münze ist die Sachlage ja relativ einfach. Im Folgenden sehen wir einmal die Ergebnismenge eines sechseitigen Würfels oder 1W6 genauer an. Bei einem Würfel haben wir ja mehrere Möglichkeiten ein Ereignis zu definieren.
+
+Ergebnis oder Ergebnismenge
+: Alles was bei einem Zufallsexperiment herauskommen kann. Ein sechsseitiger Würfel hat somit die Ergebnismenge $E = \{1, 2, 3, 4, 5, 6\}$
+
+Bei einem sechseitigen Würfel können die Zahlen von eins bis sechs oben liegen. 
 
 ![](images/prob_wuerfel_01.png){fig-align="center" width="90%"}
 
-
-
-Einmal für das Ereignis $E_1 = \{\mbox{die Zahl ist gerade}\}$ 
+Jede der Zahlen hat eine Vorabwahrscheinlichkeit oder auch A-priori-Wahrscheinlichkeit für das Auftreten nach einem Wurf von $1/6$ oder $0.1\overline{6}$. Betrachten wir jetzt einmal verschiedene mögliche Ereignisse. Fangen wir mit dem Ereignis $E_1 = \{\mbox{die Zahl ist gerade}\}$ an. 
 
 ![](images/prob_wuerfel_02.png){fig-align="center" width="90%"}
 
-$E_1 = \{\mbox{die Zahl ist größer gleich 3}\}$
+Wir teilen nun die Anzahl der betrachteten Ergebnisse durch die Anzahl aller möglichen Ergebnisse. Wir erkennen, dass wir mit $2, 4$ und $6$ drei Ergebnisse haben, die eine gerade Zahl darstellen. Insgesamt hat der Würfel sechs Seiten, so dass wir sechs mögliche Ergebnisse haben. Somit ist die Wahrscheinlichkeit $Pr(E_1) = 0.5$. Die Gegenwahrscheinlichkeit $\bar{E}_1 = \{\mbox{die Zahl ist nicht gerade}\}$ ist somit auch $0.5$.
+
+Als asbschließendes Abeispiel noch das Ereignis $E_2 = \{\mbox{die Zahl ist größer gleich 3}\}$.
 
 ![](images/prob_wuerfel_03.png){fig-align="center" width="90%"}
 
-Wenn du also eine Münze wirfst, dann erhältst du zufällig Kopf oder Zahl. Leider weißt du vorher nicht, auf welcher Seite die Münze landen wird. Wir können aber berechnen, wie groß die Wahrscheinlichkeit $Pr$ für ein Ergebnis Kopf oder Zahl ist. Mit dem Bestimmen einer Eintrittswahrscheinlichkeit eines Ereignisses beschäftigt sich die Wahrscheinlichkeitsrechnung. Du musst also immer wissen, auf welches Ereignis sich eine Wahrscheinlichkeit bezieht. Eine Wahrscheinlichkeit ohne ein Ereignis ist keine Bedeutung.
-
-Wir nutzen den begriff 'fair' für ein Objekt, wenn die Wahrscheinlichkeit für da Eintreten eines Ereignisses über alle Ereignisse gleich ist. Bei einem idealen, 'fairen' Würfel hat wegen der Symmetrie jede der sechs Seiten von vornherein die gleiche Wahrscheinlichkeit, nach dem Wurf oben zu liegen. Wir bezeichnen diese Vorabwahrscheinlichkeit auch A-priori-Wahrscheinlichkeit. Ein 'fairer' Würfel hat daher keine unsymmetrische Masseverteilung an einer Seite, so dass diese Seite häufiger unten liegt. Daher ist beispielsweise die Wahrscheinlichkeit bei einem Würfelwurf, eine ungerade Zahl zu werfen, $3/6 = 0.5 = 50%$, denn es gibt drei  Ergebnisse, die ungerade sind ($1, 3, 5$), bei sechs möglichen Ergebnissen.
-
-Wenn wir eine faire Münze nehmen, In unserem Beispiel sind Kopf und Zahl beide gleich wahrscheinlich. Du hast also eine Fifty-Fifty-Chance: Die Wahrscheinlichkeit für Kopf ist ½ (oder 50 %) und die für Zahl auch.
-
-Klassische, laplacesche Auffassung von Wahrscheinlichkeiten.
-
-In der Wahrscheinlichkeitsrechnung ermittelst du Wahrscheinlichkeiten für bestimmte Ereignisse in einem 
-
-::: {.callout-note}
-##  Ergebnis ist gleich Ergebnismenge
-
-Alles was bei einem Zufallsexperiment herauskommen kann. Ein sechsseitiger Würfel hat somit die Ergebnismenge $E = \{1, 2, 3, 4, 5, 6\}$
-:::
-
-::: {.callout-note}
-##  Ereignis
-
-Ein Ereignis definieren wir selber. Zum Beispiel sind $E_1 = \{\mbox{die Zahl ist größer als 3}\}$ und $E_2 = \{\mbox{die Zahl ist gleich 6}\}$ Ereignisse. Je nach Ergebnis des Würfels kannst du dann entscheiden, ob das Ereignis eingetreten ist oder nicht. 
-:::
-
-
-
-Dies ist die sogenannte klassische Definition, wie sie von Christiaan Huygens[8] und Jakob I Bernoulli[9] entwickelt und von Laplace formuliert wurde. Sie ist die Grundlage der klassischen Wahrscheinlichkeitstheorie. Die Elementarereignisse besitzen hierbei gleiche A-priori-Eintrittswahrscheinlichkeiten.[10]
+Hier haben wir dann eine Wahrscheinlichkeit $Pr(E_2) = \cfrac{4}{6} = 0.6\overline{6}$ vorliegen. Wir haben vier Ergebnisse, die größer sind als gleich drei, von insgesamt sechs möglichen Ergebnissen.
 
 ## Baumdiagramme und Pfadregeln
+
+Zweistufiges Zufallsexperiment
+: Wir führen den Versuch nun zweimal durch. Zum Beispiel wurde die Münze nur zweimal geworfen und wir wollen die Wahrscheinlichkeit für das Ereignis $E_3 = \{\mbox{Kopf, Kopf}\}$ bestimmen.
+
 
 Schauen wir uns in @fig-prob-baum-01 einmal einen theoretischen Wahrscheinlichkeitsbaum an.
 
@@ -116,6 +117,25 @@ Pr(K_1 \cap K_2) &= Pr(K_1) \times Pr(K_2) \\
 \end{aligned}
 $$
 
+## Satz von Bayes
+
+Für zwei Ereignisse $A$ und $B$ mit der Eintrittswahrscheinlichkeit $Pr(B) > 0$ lässt sich die Wahrscheinlichkeit von
+$A$ unter der Bedingung, dass $B$ eingetreten ist, durch die Wahrscheinlichkeit von
+$B$ unter der Bedingung, dass $A$ eingetreten ist, errechnen:
+
+$$
+Pr(A\mid B) = \cfrac{Pr(B\mid A) \cdot Pr(A)} {Pr(B)}
+$$
+
+mit
+
+- $Pr(A\mid B)$ ist die bedingte Wahrscheinlichkeit des Ereignisses $A$ unter der Bedingung, dass $B$ eingetreten ist,
+- $Pr(B\mid A)$ ist die bedingte Wahrscheinlichkeit des Ereignisses $B$ unter der Bedingung, dass $A$ eingetreten ist,
+- $Pr(A)$ ist die a-priori-Wahrscheinlichkeit des Ereignisses $A$ und
+- $Pr(B)$ ist die a-priori-Wahrscheinlichkeit des Ereignisses $B$.
+
+
+
 ## Mengenschreibweise
 
 In @tbl-mengen
@@ -141,7 +161,7 @@ In @tbl-logical-figures
 |         Abbildung         |                                |                         Bedeutung                         |
 |:-------------------------:|:----------------:|:-------------------------:|
 | ![](images/schnitt_1.png) |           $A \cup B$           |             $A$ tritt ein oder $B$ tritt ein              |
-| ![](images/schnitt_2.png) |           $A \cap B$           |              $A$ trit ein und $B$ tritt ein               |
+| ![](images/schnitt_2.png) |           $A \cap B$           |              $A$ tritt ein und $B$ tritt ein               |
 | ![](images/schnitt_3.png) |        $A \setminus B$         |          $A$ tritt ein, aber $B$ tritt nicht ein          |
 | ![](images/schnitt_4.png) | $\bar{A} = \Omega \setminus A$ |                    $A$ tritt nicht ein                    |
 | ![](images/schnitt_5.png) |           $A \cup B$           | Entweder $A$ ein oder $B$ tritt ein oder keins von beiden |
