--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,11 @@
 
 Auf den folgenden Seiten wirst du nochmal die Grundlagen der Mathematik in der Statistik lernen. Wir lagern hier die Inhalte die sehr mathematisch sind von den angewandten, statistischen Themen aus. Das heißt, du findest hier sehr viel Mathematik und auch Rechenbeispiele. Es wird aber R Code geben - siehe den R Code als den Taschenrechnercode. Das hat den einfachen Grund, das wir eben dann doch mal die Grundlagen in der Mathematik wiederholen müssen. Es kann aber auch sein, dass du gar nicht so viel Mathematik später brauchst - oder wiederkommst, weil du nochmal nachschauen willst, wie du eine Teilstückfläche berechnest. Wir auch immer, hier findest du die Mathematikteile aus meinen Vorlesungen.
 
-Im Weiteren findest du meine gesammelten Klausurfragen für alle Module auf GitHub unter folgendem Link: [gesammelten Klausurfragen auf GitHub](https://github.com/jkruppa/exam/blob/main/Gesammelte_Klausurfragen_Bio_Data_Science.pdf) oder auf [ILIAS](https://lms.hs-osnabrueck.de/) im entsprechenden Modul "Mathematik und Statistik". Die Klausurfragen zu den einzelnen Vorlesungen innerhalb des Moduls werden in den entsprechenden Übungen behandelt. Zusätzlich gibt es ein Archiv, das alle bisherigen Klausuren über alle Studiengänge hinweg enthält. Dieses Archiv findest du hier: [Archive aller bisherigen Klausuren](https://github.com/jkruppa/archive).
+Im Weiteren findest du meine gesammelten Klausurfragen für alle Module auf GitHub unter folgendem Link: [gesammelten Klausurfragen auf GitHub](https://github.com/jkruppa/exam/blob/main/Gesammelte_Klausurfragen_Bio_Data_Science.pdf) oder auf [ILIAS](https://lms.hs-osnabrueck.de/) im entsprechenden Modul "Mathematik und Statistik". Die Klausurfragen zu den einzelnen Vorlesungen innerhalb eines Moduls werden in den entsprechenden Übungen behandelt. Zusätzlich gibt es ein Archiv, das alle bisherigen Klausuren über alle Studiengänge hinweg enthält. Dieses Archiv findest du hier: [Archive aller bisherigen Klausuren](https://github.com/jkruppa/archive).
+
+In der ![](images/youtube.png){fig-align="center" width="55"} [Playlist der Fragen & Antworten](https://www.youtube.com/playlist?list=PLe51bCp9JvEHxsispwEyTp6B9bqNZ1EmJ) findest du nochmal alle Antworten zu den Klausurfragen *kurz* besprochen. Gerne kannst du dir einmal das Einführungsvideo für die Playlist der Fragen & Antworten auf ![](images/youtube.png){fig-align="center" width="55"} anschauen.
+
+{{< video https://youtu.be/m2ZatnQUY0A >}}
 
 ## Kontakt {#sec-contact-mail}
 
