--- a/geometry-preface.qmd
+++ b/geometry-preface.qmd
@@ -4,7 +4,8 @@ pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 
 # Von Maßzahlen, Flächen und Volumen {#sec-geometry}
 
-*Version vom `r format(Sys.time(), '%B %d, %Y um %H:%M:%S')`*
+*Letzte Änderung am `r format(fs::file_info("geometry-preface.qmd")$modification_time, '%d. %B %Y um %H:%M:%S')`*
+
 
 In dem folgenden Kapitel zu den Maßzahlen von Einheiten sowie der Fläche und dem Volumen wollen wir uns einmal mit den Grundlagen der Berechungen beschäftigen. Wir brauchen diese Werkzeuge um zu bestimmen, wie groß ein Teilstück sein soll oder aber wenn wir wissen wollen, wie viel Torf wir bestellen müssen. 
 
