--- a/geometry-unit.qmd
+++ b/geometry-unit.qmd
@@ -4,7 +4,7 @@ pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 
 # Maßeinheiten, Flächenmaße und Volumenmaße {#sec-volume}
 
-*Version vom `r format(Sys.time(), '%B %d, %Y um %H:%M:%S')`*
+*Letzte Änderung am `r format(fs::file_info("geometry-unit.qmd")$modification_time, '%d. %B %Y um %H:%M:%S')`*
 
 ## Maßeinheiten
 
