--- a/geometry-volume.qmd
+++ b/geometry-volume.qmd
@@ -4,7 +4,7 @@ pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 
 # Volumenberechung {#sec-volume}
 
-*Version vom `r format(Sys.time(), '%B %d, %Y um %H:%M:%S')`*
+*Letzte Änderung am `r format(fs::file_info("geometry-volume.qmd")$modification_time, '%d. %B %Y um %H:%M:%S')`*
 
 In diesem Abschnitt wollen wir einmal das Volumen $V$, sowie die Oberfläche $O$ und die Grundfläche $G$ von verschiedenen geometrischen Objekten berechnen. Wie so oft musst du dir überlegen, was bei deinem Objekt jetzt die Grundfläche ist. Aber das ist dann meist im konkreten Fall sehr klar. 
 
