--- a/matrix-basic.qmd
+++ b/matrix-basic.qmd
@@ -7,7 +7,7 @@ pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc,
 conflict_prefer("summarise", "dplyr")
 ```
 
-*Version vom `r format(Sys.time(), '%B %d, %Y um %H:%M:%S')`*
+*Letzte Änderung am `r format(fs::file_info("matrix-basic.qmd")$modification_time, '%d. %B %Y um %H:%M:%S')`*
 
 ## Grundlagen Matrizen
 
