--- a/probability-basic.qmd
+++ b/probability-basic.qmd
@@ -4,7 +4,7 @@ pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 
 # Berechnungen mit Wahrscheinlichkeiten {#sec-prob-basic}
 
-*Version vom `r format(Sys.time(), '%B %d, %Y um %H:%M:%S')`*
+*Letzte Änderung am `r format(fs::file_info("probability-basic.qmd")$modification_time, '%d. %B %Y um %H:%M:%S')`*
 
 > *"Die wichtigsten Fragen des Lebens sind in der Tat größtenteils nur Wahrscheinlichkeitsprobleme." --- Pierre-Simon Laplace*
 
