--- a/probability-distribution.qmd
+++ b/probability-distribution.qmd
@@ -4,7 +4,7 @@ pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 
 # Verteilungen {#sec-prob-basic}
 
-*Version vom `r format(Sys.time(), '%B %d, %Y um %H:%M:%S')`*
+*Letzte Änderung am `r format(fs::file_info("probability-distribution.qmd")$modification_time, '%d. %B %Y um %H:%M:%S')`*
 
 Wir werden uns in der [Statistikvorlesung noch vertieft mit Verteilungen](https://jkruppa.github.io/eda-distribution.html) beschäftigen. Deshalb hier nur ein kurzer Abriss und die Konzentration auf die Normalverteilung. Im Folgenden einmal die Formel für die Normalverteilung. 
 
