--- a/probability-preface.qmd
+++ b/probability-preface.qmd
@@ -4,7 +4,7 @@ pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 
 # Von Wahrscheinlichkeiten
 
-*Version vom `r format(Sys.time(), '%B %d, %Y um %H:%M:%S')`*
+*Letzte Änderung am `r format(fs::file_info("probability-preface.qmd")$modification_time, '%d. %B %Y um %H:%M:%S')`*
 
 > *"In keinem anderen Zweig der Mathematik ist es für Experten so leicht, sich zu vertun wie in der Wahrscheinlichkeitsrechnung." --- Martin Gardner*
 
