--- a/vector-basic.qmd
+++ b/vector-basic.qmd
@@ -4,7 +4,7 @@ pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 
 # Berechnungen mit Vektoren {#sec-vec}
 
-*Version vom `r format(Sys.time(), '%B %d, %Y um %H:%M:%S')`*
+*Letzte Änderung am `r format(fs::file_info("vector-basic.qmd")$modification_time, '%d. %B %Y um %H:%M:%S')`*
 
 In diesem Kapitel wollen wir uns kurz mit Vektoren beschäftigen. Wir nutzen hier den Begriff Vektor als eine Ansammlung von Zahlen, die wir in einem Vektor ablegen. Wenn wir mehrere Vektoren zusammenkleben, dann erhalten wir eine Matrix.
 
