--- a/probability-distribution.qmd
+++ b/probability-distribution.qmd
@@ -2,7 +2,7 @@
 pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 ```
 
-# Verteilungen {#sec-prob-basic}
+# Verteilungen von Wahrscheinlichkeite {#sec-prob-basic}
 
 *Letzte Änderung am `r format(fs::file_info("probability-distribution.qmd")$modification_time, '%d. %B %Y um %H:%M:%S')`*
 
